improved efficiency (see JDK source for more info)